added all translations to all pages

--- a/client/src/utils/localization/translations/translationEN.json
+++ b/client/src/utils/localization/translations/translationEN.json
@@ -47,5 +47,30 @@
   "User info": "User info",
   "User places": "User places",
   "All users": "All users",
-  "Back to map": "Back to map"
+  "Back to map": "Back to map",
+  "Username": "Username",
+  "Email": "Email",
+  "Registered": "Registered",
+  "Total places visited": "Total places visited",
+  "Visited Places": "Visited Places",
+  "Sort by": "Sort by",
+  "Name": "Name",
+  "Rating": "Rating",
+  "Cafe": "Cafe",
+  "Bank": "Bank",
+  "Bar": "Bar",
+  "Gym": "Gym",
+  "Museum": "Museum",
+  "All": "All",
+  "No visited places": "No visited places",
+  "Back to profile": "Back to profile",
+  "Google rating": "Google rating",
+  "Adress": "Adress",
+  "Tags": "Tags",
+  "Users rewies": "Users rewies",
+  "No reviews": "No reviews",
+  "Leave comment": "Leave comment",
+  "Add Comment": "Add Comment",
+  "Reviews from google": "Reviews from google",
+  "place details not found!": "place details not found!"
 }
