some bugs fixed, upgraded styles for better UI & UX, useless code removed

--- a/client/src/utils/localization/translations/translationEN.json
+++ b/client/src/utils/localization/translations/translationEN.json
@@ -72,5 +72,13 @@
   "Leave comment": "Leave comment",
   "Add Comment": "Add Comment",
   "Reviews from google": "Reviews from google",
-  "place details not found!": "place details not found!"
+  "place details not found!": "place details not found!",
+  "Delete from visited": "Delete from visited",
+  "Language": "Language",
+  "Theme": "Theme",
+  "Account": "Account",
+  "Navigation": "Navigation",
+  "Find!": "Find!",
+  "View details": "View details",
+  "Search results": "Search results"
 }
