some semantic tags added, console logs removed, replaced connect func to redux hooks

--- a/client/src/utils/localization/translations/translationRU.json
+++ b/client/src/utils/localization/translations/translationRU.json
@@ -80,5 +80,9 @@
   "Navigation": "Навигация",
   "Find!": "Найти!",
   "View details": "Подробнее",
-  "Search results": "Результаты поиска"
+  "Search results": "Результаты поиска",
+  "Add login type": "Добавить сбособ авторизации",
+  "User`s profile": "Профиль пользователя",
+  "Place`s information": "Информация о месте",
+  "User`s information": "Информация о пользователе"
 }
