--- a/client/src/utils/localization/translations/translationEN.json
+++ b/client/src/utils/localization/translations/translationEN.json
@@ -80,5 +80,9 @@
   "Navigation": "Navigation",
   "Find!": "Find!",
   "View details": "View details",
-  "Search results": "Search results"
+  "Search results": "Search results",
+  "Add login type": "Add login type",
+  "User`s profile": "User`s profile",
+  "Place`s information": "Place`s information",
+  "User`s information": "User`s information"
 }
