Error boundary added

--- a/client/src/utils/localization/translations/translationEN.json
+++ b/client/src/utils/localization/translations/translationEN.json
@@ -84,5 +84,6 @@
   "Add login type": "Add login type",
   "User`s profile": "User`s profile",
   "Place`s information": "Place`s information",
-  "User`s information": "User`s information"
+  "User`s information": "User`s information",
+  "Something went wrong": "Something went wrong"
 }
