--- a/client/src/utils/localization/translations/translationRU.json
+++ b/client/src/utils/localization/translations/translationRU.json
@@ -84,5 +84,6 @@
   "Add login type": "Добавить сбособ авторизации",
   "User`s profile": "Профиль пользователя",
   "Place`s information": "Информация о месте",
-  "User`s information": "Информация о пользователе"
+  "User`s information": "Информация о пользователе",
+  "Something went wrong": "Что-то пошло не так"
 }
