some bugs fixed

--- a/client/src/utils/localization/translations/translationRU.json
+++ b/client/src/utils/localization/translations/translationRU.json
@@ -16,6 +16,7 @@
   "or": "или",
   "register now!": "зарегистрироваться",
   "Login with facebook": "Войти используя facebook",
+  "Login with Facebook": "Войти используя Facebook",
   "Login with Google": "Войти используя google",
   "Please input your Email!": "Введите Email!",
   "The input is not valid E-mail!": "Введите действительный Email",
