optimized rerendering google map

--- a/client/src/utils/localization/translations/translationEN.json
+++ b/client/src/utils/localization/translations/translationEN.json
@@ -85,5 +85,7 @@
   "User`s profile": "User`s profile",
   "Place`s information": "Place`s information",
   "User`s information": "User`s information",
-  "Something went wrong": "Something went wrong"
+  "Something went wrong": "Something went wrong",
+  "Delete marker": "Delete marker",
+  "Clear markers": "Clear markers"
 }
