--- a/client/src/utils/localization/translations/translationRU.json
+++ b/client/src/utils/localization/translations/translationRU.json
@@ -86,5 +86,7 @@
   "User`s profile": "Профиль пользователя",
   "Place`s information": "Информация о месте",
   "User`s information": "Информация о пользователе",
-  "Something went wrong": "Что-то пошло не так"
+  "Something went wrong": "Что-то пошло не так",
+  "Delete marker": "Удалить маркер",
+  "Clear markers": "Удалить маркеры"
 }
